2015-06-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.51 released.

2015-06-12  Carl Hetherington  <cth@carlh.net>

	* New ru_RU translation from Igor Voytovich.

2015-06-12  c.hetherington  <cth@carlh.net>

	* Fix for every audio stream being mapped to the DCP when loading
	old films.

2015-06-11  c.hetherington  <cth@carlh.net>

	* Fix massive slowdown of direct J2K->DCP encodes (#599).

	* Fix hang on audio analysis in some cases (#598).

	* Fix never-ending encode when XYZ values are clamped (#600).

2015-06-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.50 released.

2015-06-10  c.hetherington  <cth@carlh.net>

	* Skip audio analysis when there is no audio content (#596).

2015-06-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.49 released.

2015-06-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.48 released.

2015-06-03  Carl Hetherington  <cth@carlh.net>

	* Various fixes to subtitle rendering, including independent
	x and y scale of text subs (#489).

2015-06-02  c.hetherington  <cth@carlh.net>

	* Allow use of all content audio streams, not just
	the selected one.

	* Tweak colour conversion controls so that it's easier
	to use a preset without seeing the details.

2015-05-25  Carl Hetherington  <cth@carlh.net>

	* Block all but alphanumeric characters with a few bits
	of punctuation from DCP names.

	* Improve view of jobs in various ways.

	* Increase the number of images that DCP-o-matic will
	keep around in memory before resorting to pushing them
	to disk.

	* Display DCP container size beside the choice
	in the DCP tab.

	* Try to set up useful default colour conversions
	depending on the type and resolution of content (#565).

2015-05-23  Carl Hetherington  <cth@carlh.net>

	* Fix failure to import some video MXFs (#566).

2015-05-17  Carl Hetherington  <cth@carlh.net>

	* Update DCP name on changing DCP standard (#570).

2015-05-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.47 released.
